Fix output visibility on small phone with height <400px

--- a/src/Ncodi.Web/wwwroot/css/playground.css
+++ b/src/Ncodi.Web/wwwroot/css/playground.css
@@ -72,7 +72,7 @@
     .output {
         left: 0% !important;
         width: 100% !important;
-        top:76% !important;
+        top:80% !important;
         height:50% !important;
     }
     .playground_header {
